 - Book 8 Section 138: Avoid duplicates in sell objects list.
 - Add Kai/Magnakai serie loyalty bonus, effective only if played all the 5 kai books (for magnakai) or 12 kai/magnakai books (for grand master)
 - Fixed bug in book 5 / sect178: Mindblast was disabled
 - Fixed bug with Curing +20EP button: You were allowed to use if you were dead

1.13
 - Kai Chronicles is now an English webapp only (no more APK or Spanish language)
 - Based on latest git data (instead of no longer maintained SVN data)
 - Book 15 and 16 available
 - Various fixes in previous books
 - When starting a new game, you can choose the random table type
 - In equipment section of books 6 and above, automatically adds exceeding money to kai monastry if belt pouch exceed 50 when picking random number for money
 - Add new tag rule. Allows to check if player has see some sections in previous books
 - Disable use of object restoring endurance prior/during combat (except is specified)
 - Apply healing only on story sections

 1.13.1
 - Fix combatsWon test not checked if set to false (can stuck the player in multiples books)

 1.14
 - Book 17 and 18 available
 - Book 14/15: Fix test that only check rope instead of rope/largerope
 - Added possibility to restart the book from section 1
 - Reset zoom button added for the map

 1.15
 - Book 19 and 20 available. Grand Master is now complete!
 - Restore the possibility to run Kai Chronicles inside Docker
 
 1.15.1 (*Thanks to lonevvolf for the fixes*)
 - Fixed MIME type of the savegame to JSON
 - Allows to create homescreen app icon, on mobile devices, using Safari or Chrome.
 - Fireseeds are now stacked.
 - Book 8/11: Fix mental only battle
 - Book 9: Fix meal sections where only huntmastery is allowed (can't hunt if only kai hunting discipline)
 - Book 18: Don't remove quivers when loosing backpack (sect236/290/335)

 1.15.2
 - Refactor case tags in xml files in order to avoid lower/upper limits that can stuck the player (ex. b13 sect176).