@@ -128,4 +128,5 @@
  - Book 18: Don't remove quivers when loosing backpack (sect236/290/335)
 
  1.15.2
- - Refactor case tags in xml files in order to avoid lower/upper limits that can stuck the player (ex. b13 sect176).
+ - Refactor case tags in xml files in order to avoid lower/upper limits that can stuck the player (ex. sect176 in book 13 ).
+ - Book 16: Fix sect225/sect318 where picking the Deathstaff was missing
